<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget28"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@drawable/bck_idecanarias"
    android:orientation="vertical" >
	
    <TextView
		android:id="@+id/widget45"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
	</TextView>
    
	<Button
		android:id="@+id/btnGeoSearch"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/btnGeoSearch">
	</Button>
	
	<TextView
		android:id="@+id/widget34"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
	</TextView>
	
	<Button
		android:id="@+id/btnReverseGeocoding"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/btnReverseGeocoding">
	</Button>

	<TextView
		android:id="@+id/widget35"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
	</TextView>
	
	<Button
		android:id="@+id/btnGeoOpenLayers"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/btnGeoOpenLayers">
	</Button>
	
	
	<Button
		android:id="@+id/btnGeoSearch001"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/btnGeoSearch001">
	</Button>

		<Button
		android:id="@+id/btnWMSMap"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/btnWMSMap">
	</Button>
		
</TableLayout>
	

