<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="5dp" >
 
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >
 
            <Button
                android:id="@+id/button1"
                style="@style/dashboard_button"
                android:drawableTop="@drawable/icon1"
                android:onClick="clicked"
                android:text="@string/button1" />
 
            <Button
                android:id="@+id/button2"
                style="@style/dashboard_button"
                android:drawableTop="@drawable/icon2"
                android:onClick="clicked"
                android:text="@string/button2" />
        </LinearLayout>
 
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
 
            <Button
                android:id="@+id/button3"
                style="@style/dashboard_button"
                android:drawableTop="@drawable/icon3"
                android:onClick="clicked"
                android:text="@string/button3" />
 
            <Button
                android:id="@+id/button4"
                style="@style/dashboard_button"
                android:drawableTop="@drawable/icon4"
                android:onClick="clicked"
                android:text="@string/button4" />
        </LinearLayout>
 
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
 
            <Button
                android:id="@+id/button5"
                style="@style/dashboard_button"
                android:drawableTop="@drawable/icon5"
                android:onClick="clicked"
                android:text="@string/button5" />
 
            <Button
                android:id="@+id/button6"
                style="@style/dashboard_button"
                android:drawableTop="@drawable/icon6"
                android:onClick="clicked"
                android:text="@string/button6" />
        </LinearLayout>
    </LinearLayout>
 
</ScrollView>